fixed forecast-info component to make position sticky when viewing on mobile

--- a/src/components/Forecast/ForecastInfo/forecast-info.scss
+++ b/src/components/Forecast/ForecastInfo/forecast-info.scss
@@ -3,7 +3,7 @@
 
 .forecast-info {
     @include flexCenter(column);
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     background-color: rgb($primary-colour, 0.6);
